--- a/site1/miniproject1cs.css
+++ b/site1/miniproject1cs.css
@@ -1,5 +1,6 @@
 h1{
   color: blue;
+  top: 40px;
   }
          }
 div{
@@ -15,6 +16,7 @@ canvas{
   width: 400px;
   height:400px;
   border: 1px solid black;
+  background-color: white;
 }
 .bluewhite{
   background-color: yellow;
@@ -30,4 +32,13 @@ canvas{
   background-color:red;
   height: 28px;
   width: 100px;
+}
+#main-content {
+  background-color: #B190D4;
+text-align:center;
+
+}
+p{
+font-size: 20px;
+font-family: sans-serif;
 }
